test_cases/semantic-error/semantic-error.cpp
void main()
{
  int x;
  string a;
  x = a;
}